{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 99,
  "lineage": "6641ab27-5fe4-d93f-2769-6cbe59bcdbd1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lifree-ngw-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a310a47fd1782c25",
            "association_id": "eipassoc-06fb10b97113be0c5",
            "domain": "vpc",
            "id": "eipalloc-0a310a47fd1782c25",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-057d099f9facbcb25",
            "private_dns": "ip-10-0-0-214.ap-northeast-1.compute.internal",
            "private_ip": "10.0.0.214",
            "public_dns": "ec2-13-230-76-215.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.230.76.215",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "lifree-ngw-eip"
            },
            "tags_all": {
              "Name": "lifree-ngw-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.lifree-igw",
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lifree-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:827438519178:internet-gateway/igw-023a5cff5ae195510",
            "id": "igw-023a5cff5ae195510",
            "owner_id": "827438519178",
            "tags": {
              "Name": "lifree-igw"
            },
            "tags_all": {
              "Name": "lifree-igw"
            },
            "vpc_id": "vpc-0097e3cbd05a8556e"
          },
          "dependencies": [
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lifree-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:827438519178:loadbalancer/app/lifree-alb/aa6326322fcd533a",
            "arn_suffix": "app/lifree-alb/aa6326322fcd533a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "lifree-alb-1604247603.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:827438519178:loadbalancer/app/lifree-alb/aa6326322fcd533a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lifree-alb",
            "security_groups": [
              "sg-0af757704e67d2189"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00ba697f6ab4b6899"
              },
              {
                "subnet_id": "subnet-06aaa2ce49225b25d"
              }
            ],
            "subnets": [
              "subnet-00ba697f6ab4b6899",
              "subnet-06aaa2ce49225b25d"
            ],
            "tags": {
              "Name": "lifree-alb"
            },
            "tags_all": {
              "Name": "lifree-alb"
            },
            "vpc_id": "vpc-0097e3cbd05a8556e",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.lifree-alb-sg",
            "aws_subnet.lifree-public-1a",
            "aws_subnet.lifree-public-1c",
            "aws_vpc.lifree-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lifree-api-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:827438519178:listener/app/lifree-alb/aa6326322fcd533a/e50bfbece64e61e2",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:827438519178:certificate/8d1ac708-1635-4e46-b31b-f31285dcfed6",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:827438519178:targetgroup/lifree-alb-api-tg/88a9a3b39a71a0ce",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:827438519178:listener/app/lifree-alb/aa6326322fcd533a/e50bfbece64e61e2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:827438519178:loadbalancer/app/lifree-alb/aa6326322fcd533a",
            "port": 3000,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.lifree-acm",
            "aws_lb.lifree-alb",
            "aws_lb_target_group.lifree-alb-api-tg",
            "aws_route53_record.lifree-host-zone-recode",
            "aws_route53_zone.lifree-host-zone",
            "aws_security_group.lifree-alb-sg",
            "aws_subnet.lifree-public-1a",
            "aws_subnet.lifree-public-1c",
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lifree-http-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:827438519178:listener/app/lifree-alb/aa6326322fcd533a/5d4ee387806d10f1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:827438519178:listener/app/lifree-alb/aa6326322fcd533a/5d4ee387806d10f1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:827438519178:loadbalancer/app/lifree-alb/aa6326322fcd533a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lifree-alb",
            "aws_security_group.lifree-alb-sg",
            "aws_subnet.lifree-public-1a",
            "aws_subnet.lifree-public-1c",
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lifree-https-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:827438519178:listener/app/lifree-alb/aa6326322fcd533a/79c1ea01f5acc842",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:827438519178:certificate/8d1ac708-1635-4e46-b31b-f31285dcfed6",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:827438519178:targetgroup/lifree-alb-front-tg/36fc33a00f5c9bbe",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:827438519178:listener/app/lifree-alb/aa6326322fcd533a/79c1ea01f5acc842",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:827438519178:loadbalancer/app/lifree-alb/aa6326322fcd533a",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.lifree-acm",
            "aws_lb.lifree-alb",
            "aws_lb_target_group.lifree-alb-front-tg",
            "aws_route53_record.lifree-host-zone-recode",
            "aws_route53_zone.lifree-host-zone",
            "aws_security_group.lifree-alb-sg",
            "aws_subnet.lifree-public-1a",
            "aws_subnet.lifree-public-1c",
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lifree-alb-api-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:827438519178:targetgroup/lifree-alb-api-tg/88a9a3b39a71a0ce",
            "arn_suffix": "targetgroup/lifree-alb-api-tg/88a9a3b39a71a0ce",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 60,
                "matcher": "200",
                "path": "/api/v1/tasks",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 50,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:827438519178:targetgroup/lifree-alb-api-tg/88a9a3b39a71a0ce",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lifree-alb-api-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0097e3cbd05a8556e"
          },
          "dependencies": [
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lifree-alb-front-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:827438519178:targetgroup/lifree-alb-front-tg/36fc33a00f5c9bbe",
            "arn_suffix": "targetgroup/lifree-alb-front-tg/36fc33a00f5c9bbe",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 150,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 120,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:827438519178:targetgroup/lifree-alb-front-tg/36fc33a00f5c9bbe",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lifree-alb-front-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0097e3cbd05a8556e"
          },
          "dependencies": [
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "lifree-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a310a47fd1782c25",
            "connectivity_type": "public",
            "id": "nat-07d10cf9dda012b66",
            "network_interface_id": "eni-057d099f9facbcb25",
            "private_ip": "10.0.0.214",
            "public_ip": "13.230.76.215",
            "subnet_id": "subnet-00ba697f6ab4b6899",
            "tags": {
              "Name": "lifree-ngw"
            },
            "tags_all": {
              "Name": "lifree-ngw"
            }
          },
          "dependencies": [
            "aws_eip.lifree-ngw-eip",
            "aws_internet_gateway.lifree-igw",
            "aws_subnet.lifree-public-1a",
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lifree-private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:827438519178:route-table/rtb-08020d9ddee9665e9",
            "id": "rtb-08020d9ddee9665e9",
            "owner_id": "827438519178",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07d10cf9dda012b66",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lifree-private-route"
            },
            "tags_all": {
              "Name": "lifree-private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0097e3cbd05a8556e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.lifree-ngw-eip",
            "aws_internet_gateway.lifree-igw",
            "aws_nat_gateway.lifree-ngw",
            "aws_subnet.lifree-public-1a",
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lifree-public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:827438519178:route-table/rtb-0d567ba2f8fc10692",
            "id": "rtb-0d567ba2f8fc10692",
            "owner_id": "827438519178",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-023a5cff5ae195510",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lifree-public-route"
            },
            "tags_all": {
              "Name": "lifree-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0097e3cbd05a8556e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.lifree-igw",
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lifree-private-rtb-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07006b19a4a3534f0",
            "route_table_id": "rtb-08020d9ddee9665e9",
            "subnet_id": "subnet-0f34cc683bd202960"
          },
          "dependencies": [
            "aws_eip.lifree-ngw-eip",
            "aws_internet_gateway.lifree-igw",
            "aws_nat_gateway.lifree-ngw",
            "aws_route_table.lifree-private-rtb",
            "aws_subnet.lifree-private-1a",
            "aws_subnet.lifree-public-1a",
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lifree-private-rtb-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fab91406840b276",
            "route_table_id": "rtb-08020d9ddee9665e9",
            "subnet_id": "subnet-001cc65b820d89667"
          },
          "dependencies": [
            "aws_eip.lifree-ngw-eip",
            "aws_internet_gateway.lifree-igw",
            "aws_nat_gateway.lifree-ngw",
            "aws_route_table.lifree-private-rtb",
            "aws_subnet.lifree-private-1c",
            "aws_subnet.lifree-public-1a",
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lifree-public-rtb-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d03d9f87d5285782",
            "route_table_id": "rtb-0d567ba2f8fc10692",
            "subnet_id": "subnet-00ba697f6ab4b6899"
          },
          "dependencies": [
            "aws_internet_gateway.lifree-igw",
            "aws_route_table.lifree-public-rtb",
            "aws_subnet.lifree-public-1a",
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lifree-public-rtb-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036069ce37a4d97a4",
            "route_table_id": "rtb-0d567ba2f8fc10692",
            "subnet_id": "subnet-06aaa2ce49225b25d"
          },
          "dependencies": [
            "aws_internet_gateway.lifree-igw",
            "aws_route_table.lifree-public-rtb",
            "aws_subnet.lifree-public-1c",
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lifree-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:827438519178:security-group/sg-0af757704e67d2189",
            "description": "ALB security group for lifree",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "lifree-alb-sg-rule4",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af757704e67d2189",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "lifree-alb-sg-rule1",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "lifree-alb-sg-rule2",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "lifree-alb-sg-rule3",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "lifree-alb-sg-rule5",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "lifree-alb-sg-rule6",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "lifree-alb-sg",
            "name_prefix": "",
            "owner_id": "827438519178",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0097e3cbd05a8556e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lifree-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lifree-ecs-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:827438519178:security-group/sg-02cec1df97cef91de",
            "description": "ECS service security group for lifree",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "lifree-ecs-sg-rule2",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02cec1df97cef91de",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "lifree-ecs-sg-rule1",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "lifree-ecs-sg-rule3",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "lifree-ecs-sg-rule4",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "lifree-ecs-sg-rule5",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "lifree-ecs-sg-rule6",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "lifree-ecs-sg-rule5",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0af757704e67d2189"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "lifree-ecs-sg",
            "name_prefix": "",
            "owner_id": "827438519178",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0097e3cbd05a8556e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lifree-rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:827438519178:security-group/sg-02584c5f383845055",
            "description": "RDS security group for lifree",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "lifree rds sg rule2",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "lifree rds sg rule3",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02584c5f383845055",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "0.0.0.0/16"
                ],
                "description": "lifree rds sg rule",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "lifree-rds-sg",
            "name_prefix": "",
            "owner_id": "827438519178",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0097e3cbd05a8556e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lifree-alb-sg-rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "lifree-alb-sg-rule1",
            "from_port": 80,
            "id": "sgrule-1893169617",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0af757704e67d2189",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lifree-alb-sg",
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lifree-alb-sg-rule2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "lifree-alb-sg-rule2",
            "from_port": 8,
            "id": "sgrule-180490860",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-0af757704e67d2189",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lifree-alb-sg",
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lifree-alb-sg-rule3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "lifree-alb-sg-rule3",
            "from_port": 443,
            "id": "sgrule-400109539",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0af757704e67d2189",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lifree-alb-sg",
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lifree-alb-sg-rule4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "lifree-alb-sg-rule4",
            "from_port": 0,
            "id": "sgrule-1382025100",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0af757704e67d2189",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lifree-alb-sg",
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lifree-alb-sg-rule5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "lifree-alb-sg-rule5",
            "from_port": 8080,
            "id": "sgrule-2391393107",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0af757704e67d2189",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lifree-alb-sg",
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lifree-alb-sg-rule6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "lifree-alb-sg-rule6",
            "from_port": 3000,
            "id": "sgrule-3253307719",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0af757704e67d2189",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lifree-alb-sg",
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lifree-ecs-sg-rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "lifree-ecs-sg-rule1",
            "from_port": 8,
            "id": "sgrule-1814523299",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-02cec1df97cef91de",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lifree-ecs-sg",
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lifree-ecs-sg-rule2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "lifree-ecs-sg-rule2",
            "from_port": 0,
            "id": "sgrule-3727626538",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02cec1df97cef91de",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lifree-ecs-sg",
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lifree-ecs-sg-rule3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "lifree-ecs-sg-rule3",
            "from_port": 80,
            "id": "sgrule-2464406276",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02cec1df97cef91de",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lifree-ecs-sg",
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lifree-ecs-sg-rule4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "lifree-ecs-sg-rule4",
            "from_port": 443,
            "id": "sgrule-3545120329",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02cec1df97cef91de",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lifree-ecs-sg",
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lifree-ecs-sg-rule5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "lifree-ecs-sg-rule5",
            "from_port": 0,
            "id": "sgrule-626555810",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02cec1df97cef91de",
            "self": false,
            "source_security_group_id": "sg-0af757704e67d2189",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lifree-alb-sg",
            "aws_security_group.lifree-ecs-sg",
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lifree-ecs-sg-rule6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "lifree-ecs-sg-rule6",
            "from_port": 3000,
            "id": "sgrule-4289804609",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02cec1df97cef91de",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lifree-ecs-sg",
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lifree-ecs-sg-rule7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "lifree-ecs-sg-rule5",
            "from_port": 8080,
            "id": "sgrule-2966516565",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02cec1df97cef91de",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lifree-ecs-sg",
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lifree-rds-sg-rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0",
              "0.0.0.0/16"
            ],
            "description": "lifree rds sg rule",
            "from_port": 5432,
            "id": "sgrule-1765419426",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02584c5f383845055",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lifree-rds-sg",
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lifree-rds-sg-rule2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "lifree rds sg rule2",
            "from_port": 0,
            "id": "sgrule-3642457156",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02584c5f383845055",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lifree-rds-sg",
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lifree-rds-sg-rule3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "lifree rds sg rule3",
            "from_port": 0,
            "id": "sgrule-2901266222",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02584c5f383845055",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lifree-rds-sg",
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lifree-private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:827438519178:subnet/subnet-0f34cc683bd202960",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f34cc683bd202960",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "827438519178",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lifree-private-1a"
            },
            "tags_all": {
              "Name": "lifree-private-1a"
            },
            "vpc_id": "vpc-0097e3cbd05a8556e"
          },
          "dependencies": [
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lifree-private-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:827438519178:subnet/subnet-001cc65b820d89667",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001cc65b820d89667",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "827438519178",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lifree-private-1c"
            },
            "tags_all": {
              "Name": "lifree-private-1c"
            },
            "vpc_id": "vpc-0097e3cbd05a8556e"
          },
          "dependencies": [
            "aws_vpc.lifree-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lifree-public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:827438519178:subnet/subnet-00ba697f6ab4b6899",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ba697f6ab4b6899",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "827438519178",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lifree-public-1a"
            },
            "tags_all": {
              "Name": "lifree-public-1a"
            },
            "vpc_id": "vpc-0097e3cbd05a8556e"
          },
          "dependencies": [
            "aws_vpc.lifree-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lifree-public-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:827438519178:subnet/subnet-06aaa2ce49225b25d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06aaa2ce49225b25d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "827438519178",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lifree-public-1c"
            },
            "tags_all": {
              "Name": "lifree-public-1c"
            },
            "vpc_id": "vpc-0097e3cbd05a8556e"
          },
          "dependencies": [
            "aws_vpc.lifree-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lifree-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:827438519178:vpc/vpc-0097e3cbd05a8556e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b86856d996e214fd",
            "default_route_table_id": "rtb-0c5da9529d66a2aa2",
            "default_security_group_id": "sg-0bb85a9e03a5e4acf",
            "dhcp_options_id": "dopt-f449a692",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0097e3cbd05a8556e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c5da9529d66a2aa2",
            "owner_id": "827438519178",
            "tags": {
              "Name": "lifree-vpc"
            },
            "tags_all": {
              "Name": "lifree-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}